--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,29 @@
 .App {
   text-align: center;
-  background-color: rgb(95, 23, 23);
+  /* background-color: rgb(95, 23, 23); */
+  background-color: #282c34;
   min-height: 100vh;
   font-size: 1.5rem;
   color: white;
   padding: 2rem;
+  padding-top: 6rem;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center; */
+}
+
+img {
+  width: 80vw;
+}
+
+@media(min-width: 600px) {
+  img {
+    width: 30rem;
+  }
+}
+
+h1 {
+  padding: 3rem 0;
 }
 
 .App-header {
